--- a/frontend/src/pages/ProjectsPage/index.module.css
+++ b/frontend/src/pages/ProjectsPage/index.module.css
@@ -44,7 +44,7 @@
   background: var(--color-mint);
   box-sizing: border-box;
   padding: 50px 0;
-  margin-bottom: 30000px;
+  margin-bottom: 300px;
 }
 
 .sectionExamplesTitle {
